--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,9 @@
   --clr-light: rgb(240, 240, 240);
   --clr-dark: rgb(31, 31, 31);
   --clr-main: rgb(204, 0, 0);
+  --clr-blueish-dark: rgb(20 29 37 / .97);
+  --clr-gray: rgb(174, 182, 191);
+  --clr-dark-gray: rgb(93, 109, 126);
 }
 
 body {
@@ -14,6 +17,11 @@ body {
 
 .dropdown.show .dropdown-menu {
   display: flex;
+  border: none;
+  background-color: var(--clr-blueish-dark);
+  padding: 0;
+  left: 15px;
+  right: 15px;
 }
 
 .navbar .dropdown>.dropdown-toggle,
@@ -26,7 +34,7 @@ body {
   font-weight: 700;
 }
 
-.bg-wrapper:hover {
+.bg-wrapper:hover, .bg-wrapper:has(.dropdown-toggle[aria-expanded="true"]) {
   background-color: var(--clr-dark);
 }
 
@@ -64,6 +72,35 @@ body {
   border-color: black
 }
 
+.navbar .dropdown-submenu {
+  flex: 1 1 0;
+  padding: 0.375rem;
+  font-weight: 700;
+}
+
+.dropdown-submenu > a, .dropdown-submenu {
+  font-size: 0.8125rem;
+  color: var(--clr-gray);
+}
+
+.dropdown-submenu-header {
+  color: var(--clr-dark-gray);
+  font-size: 1rem;
+}
+
+.dropdown-submenu a:hover {
+  color: var(--clr-main);
+}
+
+.dropdown-submenu-subheader {
+  margin-top: 0.5rem;
+}
+
+.dropdown-submenu-subheader a {
+  color: white;
+  font-size: 1rem;
+}
+
 @media screen and (max-width: 768px) {
   .nav-teams ul {
     display: grid;
@@ -86,6 +123,11 @@ body {
     margin: 0 auto;
     width: 960px;
     padding-inline: 15px;
+  }
+
+  .dropdown.show .dropdown-menu {
+    gap: 1rem;
+    padding: 0.5rem;
   }
 }
 
