--- a/styles/style.css
+++ b/styles/style.css
@@ -20,8 +20,6 @@ body {
   border: none;
   background-color: var(--clr-blueish-dark);
   padding: 0;
-  left: 15px;
-  right: 15px;
 }
 
 .navbar .dropdown>.dropdown-toggle,
@@ -72,6 +70,27 @@ body {
   border-color: black
 }
 
+.navbar .btn-subscribe {
+  background-color: var(--clr-dark);
+  font-weight: 700;
+  color: white;
+}
+
+.navbar .btn-login {
+  background-color: white;
+  font-weight: 700;
+}
+
+.navbar .btn-subscribe:hover {
+  background-color: black;
+  color: var(--clr-main);
+}
+
+.navbar .btn-login:hover {
+  color: var(--clr-dark);
+  background-color: var(--clr-light);
+}
+
 .navbar .dropdown-submenu {
   flex: 1 1 0;
   padding: 0.375rem;
@@ -101,12 +120,9 @@ body {
   font-size: 1rem;
 }
 
-@media screen and (max-width: 768px) {
-  .nav-teams ul {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(2em, 1fr));
-    gap: 0.25rem;
-    place-items: center;
+@media screen and (max-width: 376px) {
+  .btns-nav {
+    flex-direction: column;
   }
 }
 
@@ -128,6 +144,10 @@ body {
   .dropdown.show .dropdown-menu {
     gap: 1rem;
     padding: 0.5rem;
+    margin-top: 0;
+    border-radius: 0;
+    left: 15px;
+    right: 15px;
   }
 }
 
