--- a/styles/style.css
+++ b/styles/style.css
@@ -120,9 +120,29 @@ body {
   font-size: 1rem;
 }
 
+.social-networks ul {
+  flex-direction: column;
+}
+
+@media screen and (min-width: 200px) {
+  .social-networks ul {
+    flex-direction: row;
+  }
+}
+
 @media screen and (max-width: 376px) {
   .btns-nav {
     flex-direction: column;
+  }
+
+  .footer-links {
+    display: flex;
+    flex-direction: column;
+    font-size: 0.75rem;
+  }
+
+  .footer-links li {
+    margin-right: 0;
   }
 }
 
