--- a/styles/style.css
+++ b/styles/style.css
@@ -152,6 +152,14 @@ body {
   flex-direction: column;
 }
 
+.my-custom-container {
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 @media screen and (min-width: 200px) {
   .social-networks ul {
     flex-direction: row;
@@ -184,6 +192,13 @@ body {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .my-custom-container {
+    width: 94%;
+    padding: 0;
+  }
+}
+
 @media screen and (max-width: 376px) {
   .btns-nav {
     flex-direction: column;
@@ -204,15 +219,11 @@ body {
     width: 200px;
   }
 
-  .collapse.navbar-collapse .container {
-    padding: 0;
-  }
-
-  .collapse.navbar-collapse {
+  /* .collapse.navbar-collapse {
     margin: 0 auto;
-    width: 960px;
-    padding-inline: 15px;
-  }
+    width: 94%;
+    max-width: 1440px;
+  } */
 
   .dropdown.show .dropdown-menu {
     gap: 1rem;
@@ -221,11 +232,5 @@ body {
     border-radius: 0;
     left: 15px;
     right: 15px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .collapse.navbar-collapse {
-    width: 1140px;
   }
 }
