--- a/styles/style.css
+++ b/styles/style.css
@@ -219,18 +219,22 @@ body {
     width: 200px;
   }
 
-  /* .collapse.navbar-collapse {
-    margin: 0 auto;
-    width: 94%;
-    max-width: 1440px;
-  } */
-
   .dropdown.show .dropdown-menu {
     gap: 1rem;
     padding: 0.5rem;
     margin-top: 0;
     border-radius: 0;
-    left: 15px;
-    right: 15px;
+    left: 0;
+    right: 0;
+  }
+
+  .helper-container {
+    width: 94%;
+    margin: 0 auto;
+    max-width: 1400px;
+  }
+
+  .helper-container .my-custom-container {
+    width: 100%;
   }
 }
